# excel-project

./: .env  .gitignore  .pre-commit-config.yaml  alert.py  extract_data.py  final_output.xlsx  get_excel.py  main.py  picture.py  pyproject.toml  requirements.txt  test.ipynb
data/: Final Template.xlsx  Mobileum  - CRP Tracker - P2P.xlsx  Mobileum - CRP Tracker -RTR.xlsx  ~$Final Template.xlsx
